feat: update default for role
